# Esercitazioni_PCS26

ProgettoFinale/: CMakeLists.txt
ProgettoFinale/data/: esempio.txt  esempio_catena.txt
ProgettoFinale/include/circuit/: component.hpp  input.hpp  solver.hpp
ProgettoFinale/include/cycles/: de_pina.hpp  dfs_cycles.hpp  op_bool.hpp
ProgettoFinale/include/graph/: edge.hpp  graph.hpp  visit.hpp
ProgettoFinale/include/numerics/: conjugate_gradient.hpp
ProgettoFinale/main/: main.cpp
ProgettoFinale/tests/: test_bool.cpp  test_circuit.cpp  test_depina.cpp  test_framework.hpp  test_input.cpp
esercitazione10/: CmakeLists.txt  gradiente_coniugato.hpp  test_gradiente_coniugato.cpp
esercitazione5/: CmakeLists.txt  commento.txt  main.cpp  ordinamento.hpp  test_hybrid_sort.cpp  test_merge_sort.cpp  test_quick_sort.cpp  test_selection_sort.cpp
esercitazione8/: CmakeLists.txt  test_edge.cpp  test_graph.cpp  unidirected_graph.hpp
esercitazione9/: CmakeLists.txt  LifoFifo.hpp  main_graph.cpp  unidirected_graph.hpp
